[package]
name = "turtlesim"
version = "0.2.0"
description = "Turtle simulator controlled through manual control or meadow"
authors = ["Christopher Moran <christopher.and.moran@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/quietlychris/turtlesim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "turtlesim"

[dependencies]
bevy = "0.6"
meadow = { git = "https://github.com/quietlychris/meadow.git", branch = "master"}
serde = "^1"
# for logging
tracing-subscriber = "0.3"
tracing-appender = "0.2"
